IGNITE-15371 autoformat