@@ -17,6 +17,22 @@
 
 package org.apache.ignite.internal.table;
 
+import static org.apache.ignite.configuration.annotation.ConfigurationType.DISTRIBUTED;
+import static org.apache.ignite.configuration.annotation.ConfigurationType.LOCAL;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.when;
+
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -68,22 +84,6 @@ import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-
-import static org.apache.ignite.configuration.annotation.ConfigurationType.DISTRIBUTED;
-import static org.apache.ignite.configuration.annotation.ConfigurationType.LOCAL;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertSame;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockStatic;
-import static org.mockito.Mockito.when;
 
 /**
  * Tests scenarios for table manager.
@@ -139,9 +139,9 @@ public class TableManagerTest {
 
     /** Test node. */
     private final ClusterNode node = new ClusterNode(
-        UUID.randomUUID().toString(),
-        NODE_NAME,
-        new NetworkAddress("127.0.0.1", 2245)
+            UUID.randomUUID().toString(),
+            NODE_NAME,
+            new NetworkAddress("127.0.0.1", 2245)
     );
 
     /** Before all test scenarios. */
@@ -149,31 +149,30 @@ public class TableManagerTest {
     void setUp() {
         try {
             nodeCfgMgr = new ConfigurationManager(
-                List.of(NodeConfiguration.KEY),
-                Map.of(),
-                new TestConfigurationStorage(LOCAL),
-                List.of()
+                    List.of(NodeConfiguration.KEY),
+                    Map.of(),
+                    new TestConfigurationStorage(LOCAL),
+                    List.of()
             );
 
             clusterCfgMgr = new ConfigurationManager(
-                List.of(ClusterConfiguration.KEY, TablesConfiguration.KEY),
-                Map.of(),
-                new TestConfigurationStorage(DISTRIBUTED),
-                Collections.singletonList(ExtendedTableConfigurationSchema.class)
+                    List.of(ClusterConfiguration.KEY, TablesConfiguration.KEY),
+                    Map.of(),
+                    new TestConfigurationStorage(DISTRIBUTED),
+                    Collections.singletonList(ExtendedTableConfigurationSchema.class)
             );
 
             nodeCfgMgr.start();
             clusterCfgMgr.start();
 
             nodeCfgMgr.bootstrap("{\n" +
-                "   \"node\":{\n" +
-                "      \"metastorageNodes\":[\n" +
-                "         \"" + NODE_NAME + "\"\n" +
-                "      ]\n" +
-                "   }\n" +
-                "}");
-        }
-        catch (Exception e) {
+                    "   \"node\":{\n" +
+                    "      \"metastorageNodes\":[\n" +
+                    "         \"" + NODE_NAME + "\"\n" +
+                    "      ]\n" +
+                    "   }\n" +
+                    "}");
+        } catch (Exception e) {
             LOG.error("Failed to bootstrap the test configuration manager.", e);
 
             fail("Failed to configure manager [err=" + e.getMessage() + ']');
@@ -194,12 +193,12 @@ public class TableManagerTest {
     @Test
     public void testStaticTableConfigured() {
         TableManager tableManager = new TableManager(
-            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
-            rm,
-            bm,
-            ts,
-            mm,
-            workDir
+                clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+                rm,
+                bm,
+                ts,
+                mm,
+                workDir
         );
 
         assertEquals(1, tableManager.tables().size());
@@ -215,8 +214,8 @@ public class TableManagerTest {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
         TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_NAME).columns(
-            SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
-            SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
+                SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
+                SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
 
         Table table = mockManagersAndCreateTable(scmTbl, tblManagerFut);
@@ -234,8 +233,8 @@ public class TableManagerTest {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
         TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
-            SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
-            SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
+                SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
+                SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
 
         mockManagersAndCreateTable(scmTbl, tblManagerFut);
@@ -257,14 +256,14 @@ public class TableManagerTest {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
         TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_FOR_DROP_NAME).columns(
-            SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
-            SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
+                SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
+                SchemaBuilders.column("val", ColumnType.INT64).asNullable().build()
         ).withPrimaryKey("key").build();
 
         Phaser phaser = new Phaser(2);
 
         CompletableFuture<Table> createFut = CompletableFuture.supplyAsync(() ->
-            mockManagersAndCreateTableWithDelay(scmTbl, tblManagerFut, phaser)
+                mockManagersAndCreateTableWithDelay(scmTbl, tblManagerFut, phaser)
         );
 
         CompletableFuture<Table> getFut = CompletableFuture.supplyAsync(() -> {
@@ -298,35 +297,37 @@ public class TableManagerTest {
         CompletableFuture<TableManager> tblManagerFut = new CompletableFuture<>();
 
         TableDefinition scmTbl = SchemaBuilders.tableBuilder("PUBLIC", DYNAMIC_TABLE_NAME)
-            .columns(
-                SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
-                SchemaBuilders.column("val", ColumnType.INT64).asNullable().build())
-            .withPrimaryKey("key")
-            .build();
+                .columns(
+                        SchemaBuilders.column("key", ColumnType.INT64).asNonNull().build(),
+                        SchemaBuilders.column("val", ColumnType.INT64).asNullable().build())
+                .withPrimaryKey("key")
+                .build();
 
         Table table = mockManagersAndCreateTable(scmTbl, tblManagerFut);
 
         assertNotNull(table);
 
-        assertThrows(RuntimeException.class, () -> tblManagerFut.join().createTable(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
-            .changeReplicas(1)
-            .changePartitions(10)));
+        assertThrows(RuntimeException.class,
+                () -> tblManagerFut.join().createTable(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
+                        .changeReplicas(1)
+                        .changePartitions(10)));
 
-        assertSame(table, tblManagerFut.join().createTableIfNotExists(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
-            .changeReplicas(1)
-            .changePartitions(10)));
+        assertSame(table, tblManagerFut.join()
+                .createTableIfNotExists(scmTbl.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(scmTbl, tblCh)
+                        .changeReplicas(1)
+                        .changePartitions(10)));
     }
 
     /**
      * Instantiates Table manager and creates a table in it.
      *
      * @param tableDefinition Configuration schema for a table.
-     * @param tblManagerFut Future for table manager.
+     * @param tblManagerFut   Future for table manager.
      * @return Table.
      */
     private TableImpl mockManagersAndCreateTable(
-        TableDefinition tableDefinition,
-        CompletableFuture<TableManager> tblManagerFut
+            TableDefinition tableDefinition,
+            CompletableFuture<TableManager> tblManagerFut
     ) {
         return mockManagersAndCreateTableWithDelay(tableDefinition, tblManagerFut, null);
     }
@@ -335,14 +336,15 @@ public class TableManagerTest {
      * Instantiates a table and prepares Table manager. When the latch would open, the method completes.
      *
      * @param tableDefinition Configuration schema for a table.
-     * @param tblManagerFut Future for table manager.
-     * @param phaser Phaser for the wait.
+     * @param tblManagerFut   Future for table manager.
+     * @param phaser          Phaser for the wait.
      * @return Table manager.
      */
-    @NotNull private TableImpl mockManagersAndCreateTableWithDelay(
-        TableDefinition tableDefinition,
-        CompletableFuture<TableManager> tblManagerFut,
-        Phaser phaser
+    @NotNull
+    private TableImpl mockManagersAndCreateTableWithDelay(
+            TableDefinition tableDefinition,
+            CompletableFuture<TableManager> tblManagerFut,
+            Phaser phaser
     ) {
         when(rm.prepareRaftGroup(any(), any(), any())).thenReturn(CompletableFuture.completedFuture(null));
 
@@ -350,26 +352,27 @@ public class TableManagerTest {
 
         try (MockedStatic<SchemaUtils> schemaServiceMock = mockStatic(SchemaUtils.class)) {
             schemaServiceMock.when(() -> SchemaUtils.prepareSchemaDescriptor(anyInt(), any())).
-                thenReturn(mock(SchemaDescriptor.class));
+                    thenReturn(mock(SchemaDescriptor.class));
         }
 
         try (MockedStatic<AffinityUtils> affinityServiceMock = mockStatic(AffinityUtils.class)) {
             ArrayList<List<ClusterNode>> assignment = new ArrayList<>(PARTITIONS);
 
-            for (int part = 0; part < PARTITIONS; part++)
+            for (int part = 0; part < PARTITIONS; part++) {
                 assignment.add(new ArrayList<>(Collections.singleton(node)));
+            }
 
             affinityServiceMock.when(() -> AffinityUtils.calculateAssignments(any(), anyInt(), anyInt())).
-                thenReturn(assignment);
+                    thenReturn(assignment);
         }
 
         TableManager tableManager = new TableManager(
-            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
-            rm,
-            bm,
-            ts,
-            mm,
-            workDir
+                clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+                rm,
+                bm,
+                ts,
+                mm,
+                workDir
         );
 
         TableImpl tbl2 = null;
@@ -391,13 +394,14 @@ public class TableManagerTest {
 
             clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY).tables().listen(ctx -> {
                 boolean createTbl = ctx.newValue().get(tableDefinition.canonicalName()) != null &&
-                    ctx.oldValue().get(tableDefinition.canonicalName()) == null;
+                        ctx.oldValue().get(tableDefinition.canonicalName()) == null;
 
                 boolean dropTbl = ctx.oldValue().get(tableDefinition.canonicalName()) != null &&
-                    ctx.newValue().get(tableDefinition.canonicalName()) == null;
+                        ctx.newValue().get(tableDefinition.canonicalName()) == null;
 
-                if (!createTbl && !dropTbl)
+                if (!createTbl && !dropTbl) {
                     return CompletableFuture.completedFuture(null);
+                }
 
                 tableCreatedFlag.set(createTbl);
 
@@ -408,7 +412,7 @@ public class TableManagerTest {
                         Cursor<Entry> cursor = mock(Cursor.class);
 
                         when(cursor.hasNext()).thenAnswer(hasNextInvocation ->
-                            firstRecord.compareAndSet(true, false));
+                                firstRecord.compareAndSet(true, false));
 
                         Entry mockEntry = mock(Entry.class);
 
@@ -420,34 +424,33 @@ public class TableManagerTest {
 
                         return cursor;
                     });
-                }
-                catch (NodeStoppingException e) {
+                } catch (NodeStoppingException e) {
                     LOG.error("Node was stopped during table creation.", e);
 
                     fail();
                 }
 
-                if (phaser != null)
+                if (phaser != null) {
                     phaser.arriveAndAwaitAdvance();
+                }
 
                 return CompletableFuture.completedFuture(null);
             });
 
-            tbl2 = (TableImpl)tableManager.createTable(tableDefinition.canonicalName(), tblCh -> SchemaConfigurationConverter.convert(tableDefinition, tblCh)
-                .changeReplicas(1)
-                .changePartitions(10)
+            tbl2 = (TableImpl) tableManager.createTable(tableDefinition.canonicalName(),
+                    tblCh -> SchemaConfigurationConverter.convert(tableDefinition, tblCh)
+                            .changeReplicas(1)
+                            .changePartitions(10)
             );
 
             assertNotNull(tbl2);
 
             assertEquals(tablesBeforeCreation + 1, tableManager.tables().size());
-        }
-        catch (NodeStoppingException e) {
+        } catch (NodeStoppingException e) {
             LOG.error("Node was stopped during table creation.", e);
 
             fail();
-        }
-        finally {
+        } finally {
             tableManager.stop();
         }
 
